fix skills word wrap

--- a/public/stylesheets/portfolio.css
+++ b/public/stylesheets/portfolio.css
@@ -35,7 +35,7 @@ nav{
   }
 
 body{
-    /* background-image: url("/images/background.jpg"); */
+    /* background-image: url("/images/background2.jpg"); */
     background-color: rgb(56, 9, 9);
     
     background-position: 0 1000px;
@@ -149,6 +149,7 @@ p{
     display: flex;
     margin-top: 20px;
     margin-left: 60px;
+    flex-wrap: wrap;
     
 }
 
@@ -357,6 +358,17 @@ background: linear-gradient(to right, #1F1C18, #8E0E00); /* W3C, IE 10+/ Edge, F
     transform: scale(1.3);
 }
 
+#yourskills{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    color: white;
+    margin-top: 50px;
+    text-transform: capitalize;
+}
+#editbrand{
+    opacity: 0.2;
+}
 
 
 
