--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -80,12 +80,13 @@ main{
   width: 320px;
   height: auto;
   margin: 0 15px;
- background: rgba( 183, 31, 31, 0.30 );
-box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-backdrop-filter: blur( 10.0px );
--webkit-backdrop-filter: blur( 10.0px );
-border-radius: 10px;
-border: 1px solid rgba( 255, 255, 255, 0.18 );
+  
+
+  background: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.15);
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(5px);
 }
 
 .img-area img{
